test/libhyperion/syntaxTests/nameAndTypeResolution/410_string_literal_not_convertible_to_address_as_assignment.hyp
// A previous implementation claimed the string would be an address
contract AddrString {
    address public test = "Q0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000CA35b7d915458EF540aDe6068dFe2F44E8fa733c";
}
// ----
// TypeError 7407: (116-247): Type literal_string "Q0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000CA35b7d915458EF540aDe6068dFe2F44E8fa733c" is not implicitly convertible to expected type address.
